<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_padding"
                android:text="@string/email_label" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/emailTV"
                android:ems="7"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="@dimen/view_padding" />

            <Button
                android:id="@+id/findBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/emailET"
                android:onClick="findMe"
                android:text="@string/find_button" />

            <View
                android:id="@+id/ruleView"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/findBT"
                android:background="#000000" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/ruleView"
                android:padding="@dimen/view_padding"
                android:text="@string/name_label" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ruleView"
                android:layout_toRightOf="@+id/nameTV"
                android:ems="7"
                android:enabled="false"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:padding="@dimen/view_padding" />

            <RadioGroup
                android:id="@+id/genderRBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/nameET"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding">

                <RadioButton
                    android:id="@+id/maleRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:enabled="false"
                    android:padding="@dimen/view_padding"
                    android:text="@string/male_label" />

                <RadioButton
                    android:id="@+id/femaleRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:enabled="false"
                    android:padding="@dimen/view_padding"
                    android:text="@string/female_label" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/seniorCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/genderRBG"
                android:checked="false"
                android:enabled="false"
                android:padding="@dimen/view_padding"
                android:text="@string/senior_label" />

            <TextView
                android:id="@+id/favoriteTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/seniorCB"
                android:padding="@dimen/view_padding"
                android:text="@string/favorite_sport_label" />

            <Spinner
                android:id="@+id/sportSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seniorCB"
                android:layout_toRightOf="@+id/favoriteTV"
                android:clickable="false"
                android:entries="@array/sports_list"
                android:padding="@dimen/view_padding"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/teamTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/sportSP"
                android:padding="@dimen/view_padding"
                android:text="@string/favorite_team_label" />

            <EditText
                android:id="@+id/teamET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sportSP"
                android:layout_toRightOf="@+id/teamTV"
                android:enabled="false"
                android:hint="@string/team_hint"
                android:padding="@dimen/view_padding" />

            <Button
                android:id="@+id/submitBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamET"
                android:layout_centerHorizontal="true"
                android:enabled="false"
                android:onClick="submit"
                android:padding="@dimen/view_padding"
                android:text="@string/submit_button" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>